Fix image width on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -31,7 +31,3 @@ header > .content > .title, .subtitle {
     display: block;
     padding: 30px;
 }
-
-article img {
-	max-width: 100%;
-}
