--- a/css/site.css
+++ b/css/site.css
@@ -100,6 +100,10 @@ ul#nav {
     color: #2B2C30;
 }
 
+article img {
+	max-width: 100%;
+}
+
 /* Includes */
 
 .youtube_wrapper {
